--- a/text_recog_module/jpg.ipynb
+++ b/text_recog_module/jpg.ipynb
@@ -63,7 +63,7 @@
     "        tmp_str = str(\"./positive/\") + file_list[element]\n",
     "    else :\n",
     "        tmp_str = str(\"./negative/\") + file_list[element]\n",
-    "    x_train.append(cv2.imread(tmp_str))\n",
+    "    x_train.append(cv2.imread(tmp_str, cv2.IMREAD_GRAYSCALE))\n",
     "    y_train.append(y_data[element])\n",
     "    \n",
     "for element in ts_sfl_num:\n",
@@ -71,7 +71,7 @@
     "        tmp_str = str(\"./positive/\") + file_list[element]\n",
     "    else :\n",
     "        tmp_str = str(\"./negative/\") + file_list[element]\n",
-    "    x_test.append(cv2.imread(tmp_str))\n",
+    "    x_test.append(cv2.imread(tmp_str, cv2.IMREAD_GRAYSCALE))\n",
     "    y_test.append(y_data[element])"
    ]
   },
@@ -79,11 +79,21 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(200, 200)\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(x_train)):\n",
     "    x_train[i] = cv2.resize(x_train[i], (200, 200))\n",
     "    x_train[i] = x_train[i] / 255\n",
+    "    \n",
+    "print(x_train[1].shape)\n",
     "\n",
     "for i in range(len(x_test)):\n",
     "    x_test[i] = cv2.resize(x_test[i], (200, 200))\n",
@@ -92,11 +102,11 @@
     "x_train= np.asarray(x_train)\n",
     "x_test = np.asarray(x_test)\n",
     "    \n",
-    "x_train = x_train.reshape(len(y_train),200,200,3)\n",
-    "x_test = x_test.reshape(len(y_test),200,200,3)\n",
+    "x_train = x_train.reshape(len(y_train),200,200,1)\n",
+    "x_test = x_test.reshape(len(y_test),200,200,1)\n",
     "\n",
-    "y_train = keras.utils.to_categorical(y_train, 3)\n",
-    "y_test = keras.utils.to_categorical(y_test, 3)"
+    "y_train = keras.utils.to_categorical(y_train, 2)\n",
+    "y_test = keras.utils.to_categorical(y_test, 2)"
    ]
   },
   {
@@ -121,14 +131,14 @@
     "#create model\n",
     "model = Sequential()\n",
     "#add model layers\n",
-    "model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(200, 200, 3)))\n",
+    "model.add(Conv2D(32, (3, 3), activation='relu', input_shape=(200, 200, 1)))\n",
     "model.add(Conv2D(32, (3, 3), activation='relu'))\n",
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(128, activation='relu'))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(3, activation='softmax'))"
+    "model.add(Dense(2, activation='softmax'))"
    ]
   },
   {
@@ -144,21 +154,21 @@
       "Instructions for updating:\n",
       "Use tf.cast instead.\n",
       "Epoch 1/5\n",
-      "3902/3902 [==============================] - 797s 204ms/step - loss: 0.7842 - acc: 0.9435\n",
+      "3902/3902 [==============================] - 622s 159ms/step - loss: 1.2828 - acc: 0.9106\n",
       "Epoch 2/5\n",
-      "3902/3902 [==============================] - 783s 201ms/step - loss: 0.7778 - acc: 0.9515\n",
+      "3902/3902 [==============================] - 701s 180ms/step - loss: 1.2777 - acc: 0.9203\n",
       "Epoch 3/5\n",
-      "3902/3902 [==============================] - 775s 199ms/step - loss: 0.7778 - acc: 0.9515\n",
+      "3902/3902 [==============================] - 694s 178ms/step - loss: 1.2777 - acc: 0.9203\n",
       "Epoch 4/5\n",
-      "3902/3902 [==============================] - 862s 221ms/step - loss: 0.7778 - acc: 0.9515\n",
+      "3902/3902 [==============================] - 707s 181ms/step - loss: 1.2777 - acc: 0.9203\n",
       "Epoch 5/5\n",
-      "3902/3902 [==============================] - 815s 209ms/step - loss: 0.7778 - acc: 0.9515\n"
+      "3902/3902 [==============================] - 670s 172ms/step - loss: 1.2777 - acc: 0.9203\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x20ee3a87ef0>"
+       "<keras.callbacks.History at 0x2c8a2307c88>"
       ]
      },
      "execution_count": 5,
@@ -171,7 +181,7 @@
     "              optimizer='adam',\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "model.fit(x_train, y_train,batch_size=100,epochs=5, verbose=1)"
+    "model.fit(x_train, y_train,batch_size=16,epochs=20, verbose=1)"
    ]
   },
   {
@@ -212,13 +222,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1673/1673 [==============================] - 102s 61ms/step\n"
+      "1673/1673 [==============================] - 93s 55ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.9901124165352497, 0.9382347018862655]"
+       "[1.2264618306184998, 0.9234907352418438]"
       ]
      },
      "execution_count": 8,
@@ -245,11 +255,7 @@
     "#loaded_model.load_weights(\"model.h5\")\n",
     "#print(\"Loaded model from disk\")\n",
     "\n",
-    "#loaded_model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=['accuracy'])\n",
-    "\n",
-    "#score = loaded_model.evaluate(X,Y,verbose=0)\n",
-    "\n",
-    "#print(\"%s : %.2f%%\" % (loaded_model.metrics_names[1], score[1]*100))"
+    "#loaded_model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=['accuracy'])"
    ]
   }
  ],
