--- a/target_img_extract_module/SaveImage.ipynb
+++ b/target_img_extract_module/SaveImage.ipynb
@@ -88,7 +88,7 @@
     "#폴더내의 이미지 배열로 불러옴\n",
     "i=1\n",
     "j=1\n",
-    "path_dir = './Image/oriImage'\n",
+    "path_dir = '../Image/oriImage'\n",
     "file_list = os.listdir(path_dir)\n",
     "# 폴더에 있는 이미지를 전부 잘라서 저장함\n",
     "number = 1\n",
@@ -100,7 +100,7 @@
     "    rect_List = []\n",
     "    print(cutImage)\n",
     "    #이미지 변수에 저장        \n",
-    "    path = 'Image/oriImage'\n",
+    "    path = '../Image/oriImage/'\n",
     "    src = cv2.imread(path+cutImage, cv2.IMREAD_UNCHANGED)\n",
     "    \n",
     "    #drawContours 가 원본이미지를 변경하기에 이미지 복사\n",
@@ -189,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
